tests/compile/fail/explicit_test_case_on_bare_function.rs
#[hegel::explicit_test_case(x = 42)]
fn my_func(tc: hegel::TestCase) {
    let _ = tc;
}

fn main() {}
